k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: intellmeet-backend
  namespace: intellmeet
  labels:
    app: intellmeet-backend
spec:
  type: ClusterIP
  selector:
    app: intellmeet-backend
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
